--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "^1.13.3",
+    "connect-mongo": "^1.3.2",
     "express": "^4.13.4",
     "express-session": "^1.14.1",
     "mongoose": "^4.6.3",
